src/objects/XLR8_Income_Tax__c.object
<CustomObject>
    <description>XLR8 custom object that holds income tax data.</description>
    <fields>
        <fullName>AGI_Amount__c</fullName>
        <label>AGI Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alt_Min_Tax_Amount__c</fullName>
        <label>Alt Min Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charitable_Gift_Carry_Forward__c</fullName>
        <label>Charitable Gift Carry Forward</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Filed__c</fullName>
        <label>Date Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Income Taxes</relationshipLabel>
        <relationshipName>R00N40000001YuNcEAK</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Federal_Effective_Tax_Rate__c</fullName>
        <label>Federal Effective Tax Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <description>This field is used for migration purposes only. It can be hidden post migration, or if no migration will be performed.</description>
        <externalId>true</externalId>
        <label>Import ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marginal_Fed_Bracket__c</fullName>
        <label>Marginal Fed Bracket</label>
        <picklist>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>39.6%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Year_Safe_Harbor_Amount__c</fullName>
        <label>Next Year Safe Harbor Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Form_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Form Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Income Taxes</relationshipLabel>
        <relationshipName>R00N40000001YuP3EAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quarterly_Payment_Amt_Next_Year__c</fullName>
        <label>Quarterly Payment Amt Next Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarterly_Payment_Amt__c</fullName>
        <label>Quarterly Payment Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarterly_Payments_Advised_Next_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quarterly Payments Advised Next Year?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quarterly_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quarterly Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Return_Notes__c</fullName>
        <label>Return Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reviewed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N40000001ZC99EAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reviewed_by_Date__c</fullName>
        <inlineHelpText>Date that this return was officially reviewed.</inlineHelpText>
        <label>Reviewed by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule_C_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule C Included?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Form_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Form Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Income Taxes (Secondary Form Owner)</relationshipLabel>
        <relationshipName>Income_Taxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Returns_filed_in__c</fullName>
        <label>State Returns filed in</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Form__c</fullName>
        <label>Tax Form</label>
        <picklist>
            <picklistValues>
                <fullName>1040 - Head of Household</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1040 - Married Filing Jointly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1040 - Married Filing Separately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1040 - Qualifying Widower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1040 - Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1040 - UGMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1041 - Charitable Remainder Unit Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1041 - Generation Skipping Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1041 - Irrevocable Life Insurance Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1041 - Irrevocable Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1041 - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1065 - Partnership Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1120 - Corporation Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1120S - Subchapter S Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5500 - Annual Return/Report of Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>706 - Estate Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>709 - Gift Tax Return</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Form_on_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Form on File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Loss_Carry_Forward__c</fullName>
        <label>Tax Loss Carry Forward</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Year__c</fullName>
        <inlineHelpText>Enter the year of the tax return with format YYYY.</inlineHelpText>
        <label>Tax Year</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxable_Income__c</fullName>
        <label>Taxable Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taxes_Paid__c</fullName>
        <label>Taxes Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Income Tax</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Entity__c</columns>
        <columns>Tax_Year__c</columns>
        <columns>Tax_Form__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IT{00000}</displayFormat>
        <label>Income Tax ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Income Taxes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Tax_Year_Must_be_Number</fullName>
        <active>true</active>
        <description>Tax Year Must be Number</description>
        <errorConditionFormula>NOT(ISNUMBER( Tax_Year__c) )</errorConditionFormula>
        <errorDisplayField>Tax_Year__c</errorDisplayField>
        <errorMessage>Tax Year Must be entered as a Year in Format YYYY.</errorMessage>
    </validationRules>
</CustomObject>